<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">StoryIn</string>
    <string name="welcome_text">Welcome!</string>
    <string name="sub_welcome_text">We are excited to have you here. Enjoy exploring the features and functionalities we have built just for you!</string>
    <string name="email_title">Email</string>
    <string name="email_hint">Enter your email</string>
    <string name="password_title">Password</string>
    <string name="password_hint">Enter your password</string>
    <string name="login_text">Login</string>
    <string name="username_title">Username</string>
    <string name="username_hint">Enter your username</string>
    <string name="register_text">Register</string>
    <string name="back_button_description">Go back</string>
    <string name="item_name">John Doe</string>
    <string name="item_created_at" tools:ignore="TypographyDashes">2022-01-08 06:34:18</string>
    <string name="detail_text">Detail Story</string>
    <string name="story_title">Our Story</string>
    <string name="setting_title">Setting</string>
    <string name="confirm_password_title">Confirm Password</string>
    <string name="confirm_password_hint">Confirm your password</string>
    <string name="preview_image_des">This is the image of the story</string>
    <string name="description_text">Please log in to your account or sign up now to enjoy a variety of features and conveniences we offer.</string>
    <string name="login_button">Log In</string>
    <string name="signup_button">Sign Up</string>
    <string name="story_subtitle">Inspirational Stories for You</string>
    <string name="home_title">Upload your Story</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="description"><![CDATA[Share your valuable story <3]]></string>
    <string name="upload">Upload</string>
    <string name="email_invalid">Invalid email format</string>
    <string name="password_length_error">Password must be at least 8 characters long</string>
    <string name="splash_screen">This is the Splash Screen</string>
    <string name="name_required">Name is required</string>
    <string name="email_required">Email is required</string>
    <string name="password_required">Password is required</string>
    <string name="password_min_length">Password must be at least 8 characters</string>
    <string name="password_mismatch">Passwords do not match</string>
    <string name="register_successful">Registration Successful</string>
    <string name="camera_permission_required">Camera permission is required to take photos</string>
    <string name="upload_successful">Upload successful</string>
    <string name="upload_failed">Upload failed: %1$s</string>
    <string name="description_and_image_required">Please provide both a description and an image to upload.</string>
    <string name="logout_confirmation_message">Are you sure you want to log out?</string>
    <string name="logout_confirmation_yes">Yes</string>
    <string name="logout_confirmation_no">No</string>
    <string name="logout_successful">Logout successful</string>
    <string name="no_image_selected">No image selected. Please select an image before uploading.</string>
    <string name="login_success">Login successful!</string>
    <string name="preview_image_logo">This is StoryIn logo</string>
    <string name="no_story_available">Stories not available</string>
    <string name="localization_description"> This app is available in English, Indonesian, Korean, Russian, and Chinese. Tap here to change the language.</string>
</resources>