<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:paddingVertical="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/setting_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/home_title"
                android:textColor="@color/blue"
                android:textSize="25sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/preViewImageStory"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="16dp"
            android:adjustViewBounds="true"
            android:background="@drawable/image_border"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/topAppBar"
            tools:src="@tools:sample/backgrounds/scenic" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCamera"
            android:layout_width="170dp"
            android:layout_height="55dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/blue"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/camera"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@id/btnGallery"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/preViewImageStory" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnGallery"
            android:layout_width="170dp"
            android:layout_height="55dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/blue"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/gallery"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnCamera"
            app:layout_constraintTop_toBottomOf="@id/preViewImageStory" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_add_description"
            android:layout_width="350dp"
            android:layout_height="150dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/edit_text_background"
            android:fontFamily="@font/poppins_medium"
            android:gravity="start|top"
            android:hint="@string/description"
            android:importantForAccessibility="yes"
            android:inputType="textMultiLine"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textColorHint="@color/blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnCamera" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_add"
            android:layout_width="275dp"
            android:layout_height="55dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="@color/blue"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/upload"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="150dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ed_add_description" />

        <ProgressBar
            android:id="@+id/progressBarLoading"
            style="?android:attr/progressBarStyle"
            android:layout_width="69dp"
            android:layout_height="63dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>